src/post/style.css
.post-container {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    overflow: auto;
    background: transparent;
}

.post-container.is-showing-larger-image {}

.post-container.visible {
    display: block;
    animation: post-appear 1 forwards .5s;
}

@keyframes post-appear {
    to {
        background: rgba(255, 255, 255, .95);
    }
}

.post-content {
    min-height: 100%;
    padding: 0 2em;
    margin: 0 auto 25vh;
    font: normal 16px/1.5 "Libre Baskerville", serif;
}

.post-container.is-showing-larger-image .post-content {
    height: 0;
    visibility: hidden;
}

@media (min-width: 960px) {
    .post-content {
        width: 960px;
    }
}

.post-content--loading {
    display: flex;
    justify-content: center;
    align-items: center;
}

.post-content__title {
    font-size: 10vw;
    font-family: helvetica, sans-serif;
    font-weight: bold;
    line-height: 1.2;
    padding: 1em 0 .5em;
}

@media (min-width: 640px) {
    .post-content__title {
        font-size: 64px;
    }
}

.post-content__back-button {
    position: absolute;
    top: 8px;
    right: 8px;
    padding: 4px;
    font-size: 18px;
    color: #000;
    cursor: pointer;
}

@media (min-width: 640px) {
    .post-content__back-button {
        top: 24px;
        right: 24px;
        padding: 0;
        font-size: 36px;
    }
}

.post-content img {
    max-width: 100%;
}

.full-image-view {
    position: absolute;
    top: 0;
    left: 0;
    min-width: 100%;
    min-height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    background: white;
    cursor: pointer;
}

